# libupolicy

./: Makefile.am  README.org  configure.ac
doc/: Makefile.am
lib/c/include/: Makefile.am
lib/c/src/: Makefile.am
